Fix zoom scrollbar.
git-svn-id: https://mwsvn.piipari.net/mindwiki/trunk@194 2932d2ce-a958-0410-ba3e-8fac7ae6c6e8

--- a/public/stylesheets/mindwiki_graph.css
+++ b/public/stylesheets/mindwiki_graph.css
@@ -48,17 +48,8 @@
   height: 200px;
   bottom: 50px;
   left: 20px;
-  width: 16px;
   background-color: rgba(128,128,128,0.54);
   z-index: 99999999;
-	border-style: outset;
-	border-color: rgba(255,255,255,0.46);
-}
-
-.zoomScrollbarIndicator {
-  position: absolute;
-  background-color: rgba(174,209,255,0.72);
-  width: 14px;
 }
 
 .vScrollbar {
